[gd_scene load_steps=8 format=3 uid="uid://dibeq7mgier86"]

[ext_resource type="Script" uid="uid://clhrjoloqjr2c" path="res://components/move_component.gd" id="1_e1tdf"]
[ext_resource type="Script" uid="uid://drv6js7knu4m" path="res://power_ups/power_up.gd" id="1_kn7g2"]
[ext_resource type="Script" uid="uid://bakk1nmea1upw" path="res://components/hitbox_component.gd" id="2_e1tdf"]
[ext_resource type="Script" uid="uid://rbj8cldddtlp" path="res://components/stats_component.gd" id="5_6ppud"]
[ext_resource type="Script" uid="uid://cb30vdkogpydn" path="res://components/flash_component.gd" id="6_3ivhi"]
[ext_resource type="Script" uid="uid://8qg5kbkrjcur" path="res://components/scale_component.gd" id="6_p5ef7"]
[ext_resource type="Script" uid="uid://bxylq1m1e2uby" path="res://components/shake_component.gd" id="8_4qykb"]

[node name="PowerUp" type="Node2D"]
script = ExtResource("1_kn7g2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("2_e1tdf")
damage = 0.0
metadata/_custom_type_script = "uid://bakk1nmea1upw"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("1_e1tdf")
actor = NodePath("..")
metadata/_custom_type_script = "uid://clhrjoloqjr2c"

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("5_6ppud")
metadata/_custom_type_script = "uid://rbj8cldddtlp"

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("6_3ivhi")
sprite = NodePath("../AnimatedSprite2D")
metadata/_custom_type_script = "uid://cb30vdkogpydn"

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("6_p5ef7")
sprite = NodePath("../AnimatedSprite2D")
metadata/_custom_type_script = "uid://8qg5kbkrjcur"

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("8_4qykb")
node = NodePath("../AnimatedSprite2D")
metadata/_custom_type_script = "uid://bxylq1m1e2uby"

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 10.0
